build: fix spark dependencies